attempt to fix nav on mobile browsers

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -24,3 +24,7 @@
 .caret {
   border-top: 4px solid white;
 }
+
+.dropdown-backdrop {
+    position: static;
+}
